Fix: Newslist styling on mobile (#24)

--- a/blocks/newslist/newslist.css
+++ b/blocks/newslist/newslist.css
@@ -211,8 +211,30 @@
   line-height: 1.6;
 }
 
+#newslist-search-form {
+  display: none;
+}
+
 #filter-form {
-  width: 190px;
+  margin-bottom: 10px;
+}
+
+#filter-form .newslist-filter-arrow {
+  display: inline-block;
+  cursor: pointer;
+  transform: rotate(90deg);
+  width: 18px;
+  height: 18px;
+  color: transparent;
+  border: none;
+  background: transparent url('/icons/calendar-arrow-icon.svg') -9px -11px no-repeat;
+  margin-left: 10px;
+  margin-top: 3px;
+  transition: all .5s ease;
+}
+
+#filter-form .newslist-filter-arrow.active {
+  transform: rotate(-90deg);
 }
 
 #filter-form input[type='submit'] {
@@ -222,17 +244,20 @@
   color: transparent;
   border: none;
   background: url('/icons/calendar-icon.svg') no-repeat center;
-  margin-left: -50px;
-  margin-top: 5px;
+  margin-left: -44px;
+  margin-top: 4px;
+  display: none;
+  position: absolute;
 }
 
 #newslist-filter-input {
+  display: none;
   font-family: var(--graphik-semibold);
   font-style: normal;
   font-size: 18px;
   font-weight: 600;
   line-height: 37px;
-  width: 265px;
+  width: 190px;
   padding-left: 10px;
   padding-right: 50px;
   border: 1px solid #979797;
@@ -243,6 +268,8 @@
 }
 
 #newslist-filter-year {
+  display: none;
+  width: 110px;
   box-sizing: border-box;
   padding-top: 5px;
   padding-left: 15px;
@@ -257,6 +284,7 @@
   border: 1px solid #979797;
   border-radius: 0;
   position: relative;
+  margin-left: 5px;
 }
 
 #newslist-filter-year::after {
@@ -312,6 +340,17 @@
   height: 52px;
 }
 
+.newslist .newslist-container .newslist-header-container label {
+  font-family: var(--graphik-semibold);
+  padding-left: 15px;
+  margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 50px;
+  text-transform: uppercase;
+  color: #000;
+}
+
 
 @media (min-width: 1000px) {
   .newslist.block {
@@ -332,17 +371,6 @@
 
   .newslist .newslist-container .newslist-header-container form {
     display: flex;
-  }
-
-  .newslist .newslist-container .newslist-header-container label {
-    font-family: var(--graphik-semibold);
-    padding-left: 15px;
-    margin-bottom: 5px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 50px;
-    text-transform: uppercase;
-    color: #000;
   }
 
   #newslist-search-form input[type='submit'] {
@@ -378,10 +406,12 @@
   }
 
   #newslist-search-form {
+    display: flex;
     width: 50%;
   }
 
   #newslist-filter-year {
+    display: block;
     width: 370px;
     margin-left: 258px;
   }
@@ -392,6 +422,20 @@
 
   #filter-form label {
     width: 120px;
+  }
+
+  #filter-form input[type='submit'] {
+    display: inline;
+    position: relative;
+  }
+
+  #newslist-filter-input {
+    display: inline;
+    width: 265px;
+  }
+
+  #filter-form .newslist-filter-arrow {
+    display: none;
   }
 
   .newslist .newslist-container .newslist-item {
